[package]
name = "jsonrpc2"
description = "json rpc library."
version = "0.0.1"
authors = ["HarlanC <wawacry@qq.com"]
repository = "https://github.com/harlanc/jsonrpc2-rs"
license = "MIT"
readme = "README.md"
categories = ["json", "rpc", 'websocket']
keywords = ["json", "rpc", "websocket"]
edition = "2018"

[dependencies]
async-trait = "0.1.51"
anyhow = "^1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive","rc"] }
tokio-tungstenite = "*"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
tokio = { version = "1.4.0", default-features = false, features = ["full"] }
thiserror = "1.0.25"
[dependencies.tungstenite]
version = "0.17.3"
default-features = false
