[package]
name = "jrpc2"
description = "json rpc library."
version = "0.2.1"
authors = ["HarlanC <wawacry@qq.com"]
repository = "https://github.com/harlanc/jsonrpc2-rs"
license = "MIT"
readme = "README.md"
categories = ["json", "rpc", 'websocket']
keywords = ["json", "rpc", "websocket"]
edition = "2018"

[dependencies]
async-trait = "0.1.51"
anyhow = "^1.0"
serde_json = { version = "1", default-features = false, features = [
    "alloc",
    "raw_value",
    "std",
] }
serde = { version = "1.0", features = ["derive", "rc"] }
tokio-tungstenite = "0.17.2"
tungstenite = "0.17.3"
futures-util = "0.3"
tokio = { version = "1.4.0", default-features = false, features = ["full"] }
thiserror = "1.0.25"
log = "0.4"
url = "2.0.0"

